# dice-throw-distribution

./: README.md  pyproject.toml
dice_throw_distribution/: cube.py  main.py
