[tool.poetry]
name = "dice-throw-distribution"
version = "0.1.0"
description = ""
authors = ["Yaroslav <103318612+YaSoRoP@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
